--- a/src/components/PokemonForm/PokemonForm.module.scss
+++ b/src/components/PokemonForm/PokemonForm.module.scss
@@ -3,5 +3,10 @@
 }
 .form {
 	position: sticky;
-	top: 0;
+	margin-top: 50px;
+	top: 10px;
+	padding: 20px;
+	border-radius: 20px;
+	background: linear-gradient(22deg, #f85032 0%, #e73827 100%);
+	box-shadow: 0px 10px 0px 0px #b63024;
 }
