--- a/src/components/PokemonItem/PokemonItem.module.scss
+++ b/src/components/PokemonItem/PokemonItem.module.scss
@@ -16,9 +16,10 @@
 	}
 
 	h1 {
-		font-size: 1.25rem;
+		font-family: "Carter One", cursive;
+		font-size: 1.3rem;
 		margin-top: 2rem;
-		margin-bottom: 0.5rem;
+		margin-bottom: 0.25rem;
 		text-transform: capitalize;
 	}
 
@@ -28,7 +29,8 @@
 
 		.typeBadge {
 			background-color: white;
-			color: black;
+			color: #404040;
+			font-weight: 700;
 			width: min-content;
 			border-radius: 10px;
 			padding: 5px 10px;
