Improve styles, add modal

--- a/src/components/PokemonList/PokemonList.module.scss
+++ b/src/components/PokemonList/PokemonList.module.scss
@@ -1,6 +1,10 @@
 .container {
+	overflow: auto;
+	justify-content: center;
 	display: flex;
-	flex-direction: row;
 	flex-wrap: wrap;
+	flex-direction: row;
 	gap: 10px;
+	height: min-content;
+	padding: 10px;
 }
