--- a/src/components/FormInput/FormInput.module.scss
+++ b/src/components/FormInput/FormInput.module.scss
@@ -1,7 +1,7 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	padding: 8px 0 0 0;
+	padding: 4px 0 0 0;
 }
 
 .label {
@@ -11,8 +11,8 @@
 
 .inputField {
 	box-sizing: border-box;
-	border-radius: 4px;
-	border: 1px solid rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+	border: 1px solid #202221;
 	height: 35px;
 
 	&:focus-visible {
