--- a/src/components/PokemonForm/PokemonForm.module.scss
+++ b/src/components/PokemonForm/PokemonForm.module.scss
@@ -1,4 +1,5 @@
 .formContainer {
+	padding: 0px 20px;
 	position: relative;
 }
 .form {
@@ -9,4 +10,13 @@
 	border-radius: 20px;
 	background: linear-gradient(22deg, #f85032 0%, #e73827 100%);
 	box-shadow: 0px 10px 0px 0px #b63024;
+}
+
+.buttonContainer {
+	display: flex;
+	gap: 8px;
+}
+
+.formLabel {
+	color: white;
 }
