--- a/src/components/PokemonItem/PokemonItem.module.scss
+++ b/src/components/PokemonItem/PokemonItem.module.scss
@@ -4,6 +4,7 @@
 	border-radius: 20px;
 	margin-top: 50px;
 	width: 200px;
+	max-height: 150px;
 	color: white;
 	background: linear-gradient(22deg, #1d976c 0%, #93f9b9 100%);
 	box-shadow: 0px 6px 0px 0px #1a7c59;
@@ -11,7 +12,7 @@
 
 	&:hover {
 		cursor: pointer;
-		transform: translateY(-8px);
+		transform: translateY(-12px);
 		box-shadow: 0px 18px 0px 0px #1a7c59;
 	}
 
