--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -15,8 +15,8 @@
 
 .buttonPrimary {
 	composes: button;
-	background-color: white;
-	color: #404040;
+	background-color: var(--bg-default);
+	color: var(--text-default);
 }
 
 .buttonSecondary {
