--- a/src/components/PokemonItem/PokemonItem.module.scss
+++ b/src/components/PokemonItem/PokemonItem.module.scss
@@ -29,8 +29,8 @@
 		gap: 5px;
 
 		.typeBadge {
-			background-color: white;
-			color: #404040;
+			background-color: var(--bg-default);
+			color: var(--text-default);
 			font-weight: 700;
 			width: min-content;
 			border-radius: 10px;
