--- a/src/components/PokemonModal/PokemonModal.module.scss
+++ b/src/components/PokemonModal/PokemonModal.module.scss
@@ -14,12 +14,12 @@
 	max-width: 300px;
 	// height: 80%;
 	// max-height: 300px;
-	background-color: #fff;
+	background-color: var(--bg-default);
 	border-radius: 20px;
 	padding: 20px 20px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 	z-index: 3;
-	color: #404040;
+	color: var(--text-default);
 
 	&::before {
 		content: "";
@@ -29,7 +29,7 @@
 		width: 100%;
 		height: 30px;
 		z-index: 4;
-		background-color: white;
+		background-color: var(--bg-default);
 		border-radius: 20px;
 	}
 
@@ -56,7 +56,7 @@
 		.badge {
 			font-size: 0.75rem;
 			padding: 0px 10px;
-			border: 1px solid #404040;
+			border: 1px solid var(--text-default);
 			border-radius: 20px;
 		}
 	}
